--- a/roles/win_ad_user/tasks/main.yml
+++ b/roles/win_ad_user/tasks/main.yml
@@ -1,17 +1,2 @@
 ---
-# tasks file for roles/win_ad_user
-- name: Create windows domain group
-  win_domain_group:
-    name: "{{ item.group_name }}"
-    scope: "{{ item.group_scope }}"
-    state: present
-  with_items: "{{ user_info }}"
-- name: Create AD User
-  win_domain_user:
-   name: "{{ item.name }}"
-   firstname: "{{item.firstname }}"
-   surname: "{{ item.surname }}"
-   password: "{{ item.password }}"
-   state: present
-   email: '"{{ item.name }}"@ad1.7dc2.example.opentlc.com'
-  with_items: "{{ user_info }}"
+# tasks file for win_ad_user
